Add gem ability and column role for users

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -36,9 +36,13 @@ gem "thruster", require: false
 gem "rack-cors"
 gem "pg"
 
+# Authentication
 gem 'devise'
 gem 'devise-jwt'
 gem 'jsonapi-serializer'
+
+# Authorization
+gem 'cancancan'
 
 group :development, :test do
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
