--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -46,6 +46,7 @@ gem 'cancancan'
 
 group :test do
   gem 'rspec-rails', '~> 8.0.0'
+  gem 'database_cleaner-active_record'
 end
 
 group :development, :test do
